docs/main.css
html, body, div {
  margin: 0;
  padding: 0;
  border: 0;
}

html, body {
  width: 100%;
  height: 100%;
  font: 12px Helvetica, Arial, sans-serif;
  background: #fff;
  color: #000;
  overflow: hidden;
}

a {
  color: #00e;
}

table, thead, tbody, tfoot, tr, th, td {
  border: 0;
  font-size: 13px;
  text-align: left;
  vertical-align: top;
}
  table th, table td {
    padding: 0px 5px;
  }

table.simple {
  border: 1px solid #ccc;
  border-collapse: collapse;
}
  table.simple th, table.simple td {
    border: 1px solid #ccc;
  }
  table.simple thead th {
    background: #eee;
  }

pre, code {
  margin: 0;
  font-size: 13px;
  white-space: nowrap;
}
  p code,
  table.simple code {
    color: #68c;
  }

h1 { font-size: 32px; }
h2 { font-size: 24px; }
h3 { font-size: 18px; }
h4 { font-size: 14px; }
h5 { font-size: 12px; }
h6 { font-size: 10px; }

#head, #body, #foot {
  position: absolute;
  left: 0;
  right: 0;
  width: 100%;
  z-index: 0;
}
  #head {
    top: 0;
    border-bottom: 1px solid #ccc;
    height: 40px;
    overflow: hidden;
  }
  #body {
    top: 40px;
    bottom: 16px;
    height: expression(document.body.clientHeight-56 + 'px');
    overflow: auto; /* opera */
    overflow-x: hidden;
    overflow-y: auto;
  }
  #foot {
    bottom: 0;
    height: 16px;
    border-top: 1px solid #ccc;
    overflow: hidden;
  }

#title {
  padding: 0 5px;
  height: 100%;
  background: #cde;
  white-space: nowrap;
}
  #title h1 {
    display: inline;
    color: #5ad;
  }
  #title h2 {
    display: inline;
    color: #27b;
  }

#copy {
  height: 100%;
  text-align: center;
  vertical-align: bottom;
}

#nav {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  width: 180px;
  height: 100%;
  background: #158;
}
  #nav .pad {
    padding: 5px;
  }
#docs {
  position: absolute;
  top: 0;
  left: 180px;
  right: 0;
  bottom: 0;
  width: expression(document.body.clientWidth-180 + 'px');
  height: 100%;
  border-left: 1px solid #158;
}
  #docs .pad {
    padding: 5px;
    border-left: 1px solid #ccc;
  }

div.navlist {
  padding: 15px 0;
  color: #abc;
}
  div.navlist h3 {
    margin: 0;
    padding: 0 0 3px 0;
    color: #fff;
    padding-left: 8px;
    border-top: 3px solid #9ce;
    text-align: left;
  }
  div.navlist ul {
    display: block;
    margin: 0;
    padding: 0;
    list-style: none;
  }
  div.navlist li {
    display: block;
    margin: 3px 0 0 8px;
    padding-bottom: 1px;
    border: solid silver;
    border-width: 0 0 1px 1px;
  }
    div.navlist li.active {
      background: #124;
    }
      div.navlist li.active a {
        color: #bec;
      }
  div.navlist a {
    display: block;
    padding-left: 8px;
    color: #bde;
    background: inherit;
    font-size: 13px;
    font-weight: 700;
    text-decoratIon: none;
  }
    div.navlist a:hover,
    div.navlist li.active a:hover {
      color: #fff;
      background: #136;
    }

#content blockquote {
  margin-left: 20px;
}
#content h1, #content h2, #content h3, #content h4, #content h5, #content h6 {
  margin: 3px 0 8px 0;
  padding: 0 3px;
}
#content h1 { color: #036; line-height: 38px; } /* LH: 38px */
#content h2 { color: #158; line-height: 30px; } /* LH: 30px */
#content h3 { color: #27a; line-height: 22px; } /* LH: 22px */
#content h4 { color: #39d; line-height: 18px; } /* LH: 16px */
#content h5 { color: #5ae; line-height: 16px; } /* LH: 15px */
#content h6 { color: #7bf; line-height: 14px; } /* LH: 12px */
  #content h1 a { color: #630; }
  #content h2 a { color: #851; }
  #content h3 a { color: #a72; }
  #content h4 a { color: #d93; }
  #content h5 a { color: #ea5; }
  #content h6 a { color: #fb7; }

/***************
 * Excerpt: Google Code Prettify
**/

.codebox {
  padding: 5px 8px;
  border-left: 4px solid #79b;
  background: #eee;
}

/* code highlight/prettify */   /* GC Prettify */
.codebox .str { color: #a00; }  /* color: #080 */
.codebox .kwd { color: #00a; }  /* color: #008 */
.codebox .com { color: #999; }  /* color: #800 */
.codebox .typ { color: #39b; }  /* color: #606 */
.codebox .lit { color: #a00; }  /* color: #066 */
.codebox .pun { color: #d90; }  /* color: #660 */
.codebox .pln { color: #000; }  /* color: #000 */
.codebox .tag { color: #a00; }  /* color: #008 */
.codebox .atn { color: #f00; }  /* color: #606 */
.codebox .atv { color: #00f; }  /* color: #080 */
.codebox .dec { color: #0ff; }  /* color: #606 */

/** StackOverflow.com colors **/
.prettify .str { color:maroon; }
.prettify .kwd { color:#00008B; }
.prettify .com { color:gray; }
.prettify .typ { color:#2B91AF; }
.prettify .lit { color:maroon; }
.prettify .pun { color:black; }
.prettify .pln { color:black; }
.prettify .tag { color:maroon; }
.prettify .atn { color:red; }
.prettify .atv { color:blue; }
.prettify .dec { color:purple; }

@media print {
  .str { color: #060; }
  .kwd { color: #006; font-weight: bold; }
  .com { color: #600; font-style: italic; }
  .typ { color: #404; font-weight: bold; }
  .lit { color: #044; }
  .pun { color: #440; }
  .pln { color: #000; }
  .tag { color: #006; font-weight: bold; }
  .atn { color: #404; }
  .atv { color: #060; }
}

